src/stylesheets/exerciselist.scss
@import "colors";
@import "screens";

#exercise-list{
  display: flex;
  flex-direction: column;
  width: 100%;

  hr {
    border-top: 1px solid $toolbar;
    width: 100%
  }
}

#add-exercise {
  h2 {
    margin: 0;
    padding: 20px 0 0 20px;
  }
}

.add-exercise-button {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-right: 57px;
  > p {
    margin: 0;
    padding-right: 15px;
    font-size: 16px;
  }
  button span {
    font-size: 36px !important;
  }
}
.add-exercise-form {
  padding: 0 15px;
}

.add-exercise-buttons {
  display: flex;
  justify-content: center;
  padding: 10px 0;
  div {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    + div {
      margin-left: 20px;
    }
  }
}
.error-message {
  padding-bottom: 10px;
  text-align: center;
  color: $error-text;
}

.exercise {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.exercise-rows {
  #exercise-img {
    padding: 10px;
    min-width: 25%;
    max-width: 35%;
  }
  #exercise-info {
    padding: 10px;
    width: 35%;
  }
  #exercise-remove {
    padding: 10px;
  }
}

@media (max-width: $lg) {

.exercise {
  flex-direction: column;
}

.exercise-rows {
  #exercise-img {
    min-width: 100%;
    max-width: 100%;
  }
  #exercise-info {
    width: 100%;
  }
  #exercise-remove {
    display: none;
  }
}

}

